# pc_partner_service

./: .gitignore  README.md  compose.yaml  headless_debug.html  pyproject.toml  requirements.txt  requirements_win.txt
search_service/: Dockerfile  main.py
search_service/parsers/: 4laptop.py  __init__.py  base.py  pipline.py
search_service/parsers/laptop/: allnotebookparts.py  dfi.py  forlaptop.py  fornb.py  gsmforsage.py  laptopparts.py  radiodetal.py  room_parts.py  smartparts.py  suncomp.py
search_service/parsers/phone/: all_spares.py  artmobile.py  gsm_complect.py  icd.py  mobile_parts.py  motorolka.py  part_store.py  partstore.py  stylecom.py  tplus.py  vseplus.py  welcom_mobi.py
templates/: base.html  search_list.html  sidebar.html
tg_bot/: Dockerfile  main.py  main_new.py  requirements.txt
