[project]
name = "pc-partner-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Mxbely",email = "mxbely98@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.53.0,<2.0.0)",
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
